# FactChecker

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  test.py
backend/app/: Dockerfile  lambda_handler.py  push_image.ps1  pyproject.toml  requirements.txt
backend/app/api/: main.py
backend/app/factchecker/: check_claims.py  helper.py
backend/scripts/: create_lambda_zip.py  run_dev.py
backend/terraform/ecr/: main.tf  outputs.tf
backend/terraform/lambda/: main.tf  outputs.tf  variables.tf
backend/tests/: test_api.py  test_gateway.py
factchecker/: factchecker.py  helper.py  news_search.py  templates.py  wikipedia_search.py
