[project]
name = "factchecker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.128.0",
    "fastmcp>=2.14.2",
    "langchain>=1.2.3",
    "langchain-openai>=1.1.7",
    "mangum>=0.20.0",
    "uvicorn>=0.40.0",
    "wikipedia-mcp>=1.7.0",
]

